[package]
name = "framework"
version = "0.1.0"
authors = ["James Pruitt <jamescpruitt@gmail.com>"]

[dependencies]
log = "*"

# piston stuff
#piston_window = "0.58.0"
find_folder = "0.3.0"
gfx = "0.12.0"
piston2d-opengl_graphics = "0.36.0"
piston2d-graphics = "0.19.0"
gfx_device_gl = "0.11.2"
piston = "0.26.0"
pistoncore-sdl2_window = "0.36.0"
