[package]
name = "framework"
version = "0.1.0"
authors = [
    "Sam Estep <sam@samestep.com>",
    "James Pruitt <jamescpruitt@gmail.com>",
    "Jeffrey Walraven <jeffrey@ravenswall.net>"
]

[dependencies]
log = "*"
zip = "0.2"

# piston stuff
#piston_window = "0.58.0"
find_folder = "0.3.0"
gfx = "0.12.0"
piston2d-gfx_graphics = "*"
piston2d-opengl_graphics = "0.36.0"
piston2d-graphics = "0.19.0"
gfx_device_gl = "0.11.2"
piston = "0.26.0"
piston_window = "0.58.0"
image = "*"
